# claudemd-loader

./: .gitignore  BEST_PRACTICES.md  CLAUDE.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: basic_usage.py  caching_example.py  configuration_examples.py  context_aware_loading.py  custom_project_name.py  memory_integration.py  multi_file_loading.py  rag_chunking.py  rules_example.py  warning_example.py
src/claudemd_loader/: __init__.py  ctx.py
tests/: __init__.py  test_claudemd_loader.py
