[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudemd-loader"
version = "0.1.0"
description = "A library implementing CLAUDE.md conventions for loading AI context and RAG chunks."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["claude", "ai", "coding-assistant", "context-loading", "prompt-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/jrialland/claudemd-loader"
Repository = "https://github.com/jrialland/claudemd-loader"
Documentation = "https://github.com/jrialland/claudemd-loader#readme"
Issues = "https://github.com/jrialland/claudemd-loader/issues"

[dependency-groups]
lint = [
    "ruff>=0.15.1",
]
test = [
    "pytest>=9.0.2",
]
tets = [
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable standard rules + isort + type checking
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (mypy-style type checking)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["claudemd_loader"]
force-single-line = false
lines-after-imports = 2

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
